[package]
name = "coin-trade-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
base64 = "0.22.1"
dotenv = "0.15.0"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.1.0"
jwt = "0.16.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
sha2 = "0.10.8"
tokio = { version = "1.39.3", features = ["full"] }
url = "2.5.2"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4"] }
